# stm32f303x-memory-map

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  gen-peripherals.sh
ci/: install.sh  script.sh
resources/: STM32F303x.svd
